2003-07-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (addMessage): Fix for the Jabber bridge nick handling.

	* tkchat.tcl (gotoURL): Try to use DDE to open URLs (avoid quoting
	problems). Also copy the URL into the CLIPBOARD selection.

	* tkchat.tcl (::tkchat::userPost): Add a /google command to launch
	google queries with the remaining text.

	* tkchat.tcl (::tkchat::About): Added help text for the commands.
	
2003-07-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: correct display of URLs with & in them on Windows.
	Make the /bug use gotoURL now. [Bug 758596] (theado)

2003-07-01  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Update so /me messages from ircbridge show up
	correctly again. Changed the old regexp so it matches at the
	beginning only.

2003-05-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: simplify find stuff, add support for
	"/bug ?group? ?tracker? id" requests that print correct URL.  We
	can't use gotoURL until exec handles &'s in args correctly.

2003-04-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (getRecentLines): Fix for bug #729709: alerts no
	longer working. The ActionStart regexp was being too greedy.
	* tkchat.tcl (tkchat::userPost): Added a client command to open
	a browser on a TIP reference as /tip:NUMBER.

2003-04-04  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Fixed bug 686065. Multiline actions are now
	handled in exactly the same way as multiline messages.
	
2003-03-13  Pascal Scheffers  <pascal@scheffers.net>
	* tkchat.tcl: Fixed a small bug for double-tab. Changed the look
	of the suggested completions for double-tab. Previous completion
	suggestions will now disappear when a new one is shown and after
	about five seconds.

2003-03-12  Pascal Scheffers  <pascal@scheffers.net>

	* tkchat.tcl: Added ::tkchat::nickComplete and <Key-Tab> bindings
	to make bash-style command-completion of the nick under the cursor.
	